modal component added

--- a/index.html
+++ b/index.html
@@ -33,7 +33,57 @@
                 <div>hello tasnvirt</div>
                 <div>hello tasnvirt</div>
             </div>
-        </div>
+
+            <div class="my-video">
+                <button type="button" class="my-play-btn">
+                    <span></span>
+                </button>
+            </div>
+
+            <div class="my-modal active">
+                <div class="modal-content">
+                    <!-- modal close -->
+                    <div class="modal-close-btn">X</div>
+
+                    <!-- <div class="header">header</div> -->
+                    <div class="modal-body">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum odit tempore libero adipisci
+                        eum
+                        perspiciatis dolore dignissimos magnam, tenetur, quis rerum a, ab nesciunt natus. Inventore
+                        suscipit
+                        enim nam voluptate.
+                        <h2>hello</h2>
+
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi officiis non eligendi et hic
+                            error labore modi consectetur reprehenderit ea, voluptatum aut amet quae consequatur ipsam
+                            nam minus rem sed.
+                        </p>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi officiis non eligendi et hic
+                            error labore modi consectetur reprehenderit ea, voluptatum aut amet quae consequatur ipsam
+                            nam minus rem sed.
+                        </p>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi officiis non eligendi et hic
+                            error labore modi consectetur reprehenderit ea, voluptatum aut amet quae consequatur ipsam
+                            nam minus rem sed.
+                        </p>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi officiis non eligendi et hic
+                            error labore modi consectetur reprehenderit ea, voluptatum aut amet quae consequatur ipsam
+                            nam minus rem sed.
+                        </p>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi officiis non eligendi et hic
+                            error labore modi consectetur reprehenderit ea, voluptatum aut amet quae consequatur ipsam
+                            nam minus rem sed.
+                        </p>
+                        <h2>end</h2>
+                    </div>
+                    <div class="footer">header</div>
+                </div>
+            </div>
     </body>
 
 </html>
