button component added

--- a/index.html
+++ b/index.html
@@ -23,10 +23,22 @@
 
                 /* From Uiverse.io by Maximinodotpy */
                 <div class="my-input-group">
-                    <input type="text" required="" autocomplete="off">
-                    <label for="name">Name</label>
+                    <input type="text" required="" autocomplete="off" placeholder="Search Here">
+                    <label class="label" for="name">Name</label>
+                    <p class="error-text">error text here</p>
                 </div>
             </div>
+
+
+            <div class="my-card">
+                <h2>hello lorem</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure delectus, repellat doloremque eius esse vel veniam at non eos aut expedita natus dolores sapiente, earum commodi distinctio adipisci rem odio?</p>
+            </div>
+
+            <button class="my-btn my-btn-fill"><span>My Button </span></button> <br>
+            <button class="my-btn my-btn-fill my-btn-pill"><span>My Button </span></button> <br>
+            <button class="my-btn my-btn-outline">My Button </button> <br>
+            <button class="my-btn my-btn-sm my-btn-fill">My Button </button>
 
             <div class="my-grid-3 my-grid-md-2 my-grid-xs-1">
                 <div>hello tasnvirt</div>
@@ -40,7 +52,7 @@
                 </button>
             </div>
 
-            <div class="my-modal active">
+            <div class="my-modal ">
                 <div class="modal-content">
                     <!-- modal close -->
                     <div class="modal-close-btn">X</div>
