--- a/index.html
+++ b/index.html
@@ -4,98 +4,85 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Home Page</title>
-        <link rel="stylesheet" href="./Static/Css/component.css">
-        <link rel="stylesheet" href="./Static/Css/custom_class.css">
+        <meta name="description" content="A Good E-commerce Website.">
+        <meta name="keywords"
+            content="Online shopping, Affordable products, Best deals, Discount offers, Buy products online, Shop now, Order online, Top quality products, Fast delivery, Secure online shopping, Product bazaar">
+        <title>Home_Page</title>
+
+        <!-- common css -->
+        <link rel="stylesheet" href="./Static/Css/common.css">
+        <link rel="stylesheet" href="./Static/Css/pages/home.css">
     </head>
 
     <body>
-        <div>
-            <div>
-                <a href="" class="my-tooltip">
-                    Bangladesh is a hood
-                    <span class="show-text">Bangladesh</span>
-                </a>
+        <!-- ************************************ -->
+        <!--         Section Title Here          -->
+        <!-- ************************************ -->
+        <header>
+            <!-- __________  Header Top Start  __________ -->
+            <div class="header-top my-d-sm-none">
+                <div class="my-container">
+                    <div class="header-top-area my-flex-between ">
 
-                <div class="my-spinner">
-                    <div class="div"></div>
-                </div>
+                        <!-- Left -->
+                        <div class="left  my-d-flex my-align-center my-gap-2">
+                            <a href="#" class="my-d-flex my-align-center my-gap-1 my-fw-bold">
+                                <i class="fa-solid fa-envelope"></i>
+                                ecommerce@gamil.com
+                            </a>
 
-                /* From Uiverse.io by Maximinodotpy */
-                <div class="my-input-group">
-                    <input type="text" required="" autocomplete="off" placeholder="Search Here">
-                    <label class="label" for="name">Name</label>
-                    <p class="error-text">error text here</p>
-                </div>
-            </div>
+                            <span>|</span>
+                            <p class="my-fs-sm"><span class="my-fw-bolder ">Free Shipping</span> for 1000 taka
+                                up.</p>
+                        </div>
 
+                        <!-- Right -->
+                        <div class="right my-d-flex my-align-center my-justify-center my-gap-4">
+                            <!-- social -->
+                            <ul class="social my-d-flex my-gap-1">
+                                <li>
+                                    <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                                </li>
+                                <li>
+                                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                                </li>
+                                <li>
+                                    <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                                </li>
+                                <li>
+                                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                                </li>
+                            </ul>
 
-            <div class="my-card">
-                <h2>hello lorem</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure delectus, repellat doloremque eius esse vel veniam at non eos aut expedita natus dolores sapiente, earum commodi distinctio adipisci rem odio?</p>
-            </div>
+                            <!-- language -->
+                            <div class="language my-dropdown-parent">
+                                <div class="my-flex-center my-gap-1 my-fs-md my-fw-bold"> English <i
+                                        class="fa-solid fa-angle-down  my-fw-bold"></i>
+                                </div>
 
-            <button class="my-btn my-btn-fill"><span>My Button </span></button> <br>
-            <button class="my-btn my-btn-fill my-btn-pill"><span>My Button </span></button> <br>
-            <button class="my-btn my-btn-outline">My Button </button> <br>
-            <button class="my-btn my-btn-sm my-btn-fill">My Button </button>
-
-            <div class="my-grid-3 my-grid-md-2 my-grid-xs-1">
-                <div>hello tasnvirt</div>
-                <div>hello tasnvirt</div>
-                <div>hello tasnvirt</div>
-            </div>
-
-            <div class="my-video">
-                <button type="button" class="my-play-btn">
-                    <span></span>
-                </button>
-            </div>
-
-            <div class="my-modal ">
-                <div class="modal-content">
-                    <!-- modal close -->
-                    <div class="modal-close-btn">X</div>
-
-                    <!-- <div class="header">header</div> -->
-                    <div class="modal-body">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum odit tempore libero adipisci
-                        eum
-                        perspiciatis dolore dignissimos magnam, tenetur, quis rerum a, ab nesciunt natus. Inventore
-                        suscipit
-                        enim nam voluptate.
-                        <h2>hello</h2>
-
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi officiis non eligendi et hic
-                            error labore modi consectetur reprehenderit ea, voluptatum aut amet quae consequatur ipsam
-                            nam minus rem sed.
-                        </p>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi officiis non eligendi et hic
-                            error labore modi consectetur reprehenderit ea, voluptatum aut amet quae consequatur ipsam
-                            nam minus rem sed.
-                        </p>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi officiis non eligendi et hic
-                            error labore modi consectetur reprehenderit ea, voluptatum aut amet quae consequatur ipsam
-                            nam minus rem sed.
-                        </p>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi officiis non eligendi et hic
-                            error labore modi consectetur reprehenderit ea, voluptatum aut amet quae consequatur ipsam
-                            nam minus rem sed.
-                        </p>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi officiis non eligendi et hic
-                            error labore modi consectetur reprehenderit ea, voluptatum aut amet quae consequatur ipsam
-                            nam minus rem sed.
-                        </p>
-                        <h2>end</h2>
+                                <!-- dropdwon -->
+                                <ul class="my-dropdown">
+                                    <li>
+                                        <input type="radio" id="english" name="language">
+                                        <label for="english">English</label>
+                                    </li>
+                                    <li>
+                                        <input type="radio" id="bangla" name="language">
+                                        <label for="bangla">Bangla</label>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
                     </div>
-                    <div class="footer">header</div>
                 </div>
             </div>
+            <!-- __________  Header Top End  __________ -->
+
+
+
+            <!-- __________  Header Mediel Start  __________ -->
+            <div></div>
+        </header>
     </body>
 
 </html>
