--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         </div>
 
                         <!-- Right -->
-                        <div class="right my-d-flex my-align-center my-justify-center my-gap-4">
+                        <div class="right my-d-flex my-align-center my-justify-center my-gap-5">
                             <!-- social -->
                             <ul class="social my-d-flex my-gap-1">
                                 <li>
@@ -81,7 +81,129 @@
 
 
             <!-- __________  Header Mediel Start  __________ -->
-            <div></div>
+            <div class="header-mediel">
+                <div class="my-container">
+                    <div class="header-mediel-area my-flex-between">
+                        <!-- Left -->
+                        <div class="left  my-text-left">
+                            <a class="logo my-text-left" href="index.html">
+                                <h2 class="my-fw-bolder my-text-primary">Shoping.</h2>
+                            </a>
+                        </div>
+
+                        <!-- Search -->
+                        <div>
+                            <form action="#" class="search-form">
+                                <div class="my-input-control">
+                                    <div class="search">
+                                        <input class="my-radius-md" type="text" placeholder="Search product">
+                                        <button class="search-icon my-fs-lg my-flex-center"><i
+                                                class="ri-search-2-line"></i></button>
+                                    </div>
+                                    <!-- error text -->
+                                    <p class="error-text ">please search product name</p>
+                                </div>
+                            </form>
+                        </div>
+
+                        <!-- _______  Header Midel Right ______ -->
+                        <div class="right">
+                            <ul class="my-d-flex my-gap-1 my-align-center right-icons">
+
+                                <!-- delevary location -->
+                                <li class="my-tooltip">
+                                    <span class="icon">
+                                        <i class="ri-notification-3-line"></i>
+                                    </span>
+                                    <div class="base-round active">1</div>
+
+                                    <!-- Tooltip -->
+                                    <span class="show-text">notification board</span>
+                                </li>
+
+                                <!-- wise list -->
+                                <li class="my-tooltip">
+                                    <span class="icon">
+                                        <i class="ri-heart-3-line"></i>
+                                    </span>
+                                    <div class="base-round active">2</div>
+                                    <!-- Tooltip -->
+                                    <span class="show-text">wish list items</span>
+                                </li>
+
+
+
+                                <!-- user login -->
+                                <li class="my-tooltip">
+                                    <span class="icon">
+                                        <i class="ri-user-3-line"></i>
+                                    </span>
+
+                                    <!-- Tooltip Text -->
+                                    <span class="show-text">user sign in</span>
+                                </li>
+
+
+                                <!-- card list -->
+                                <li class="my-tooltip">
+                                    <span class="icon">
+                                        <i class="ri-shopping-cart-line"></i>
+                                    </span>
+                                    <div class="base-round">0</div>
+
+                                    <!-- tooltip text -->
+                                    <span class="show-text">All add to card item</span>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- __________  Header Mediel End  __________ -->
+
+
+
+            <!-- __________  Header Bottom Start  __________ -->
+            <div class="header-bottom">
+                <div class="my-container">
+                    <div class="header-bottom-area my-d-flex my-align-center my-gap-10">
+                        <div class="left">
+                            <div class="all-department-btn my-btn my-align-center my-gap-3">
+                                <i class="ri-menu-line"></i>
+                                <span>All Departments</span>
+                                <i class="ri-arrow-down-s-line"></i>
+                            </div>
+                        </div>
+
+                        <!-- right nav -->
+                        <div class="my-flex-between right my-w-100">
+                            <nav class="">
+                                <ul class="my-d-flex my-gap-6 my-align-center">
+                                    <!-- single nav -->
+                                    <li> <a class="my-nav-item active" href="#">Home</a> </li>
+                                    <li> <a class="my-nav-item" href="#">About</a> </li>
+                                    <li> <a class="my-nav-item" href="#">Blogs</a> </li>
+                                    <li> <a class="my-nav-item" href="#">Catagoris</a> </li>
+                                    <li>
+                                        <a class="my-nav-item" href="#">Shop</a>
+                                    </li>
+                                    <li> <a class="my-nav-item" href="#">Hot Offer</a> </li>
+                                    <li> <a class="my-nav-item" href="#">New Products</a> </li>
+                                    <li> <a class="my-nav-item" href="#">Contact</a> </li>
+                                </ul>
+                            </nav>
+
+                            <!--  -->
+                            <div class="btn-parent">
+                                <button class="my-btn my-btn-pill my-secendary-btn my-btn-sm"><span>Get
+                                        Discount</span></button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- __________  Header Bottom End  __________ -->
+
         </header>
     </body>
 
